# rubberduck

./: .gitignore  LICENSE  README.md  config.yml  main.py  pyproject.toml  start.sh
src/: agent.py  app.py  cli.py  client.py  llm.py  main.py  mcp.py  project_types.py  tools.py
src/agent/: core.py  main.py  types.py
src/agents/: chat_agent.py  code_agent.py
src/cli/: main.py
src/controls/: controller.py
src/functions/: __init__.py
src/functions/utils/: __init__.py  file_ops.py  web_utils.py
src/llm_client/: get_llm_client.py  google_client.py  main.py  openai_client.py  types.py
src/mcp_server/: README.md  __init__.py  context.py  discovery.py  server.py
src/memory/: memory.py
src/utils/: find_nearest_file.py  get_agent_config.py
