[project]
name = "rubberduck"
version = "0.1.0"
description = "A personal coding assistant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "flake8-pyproject>=1.2.3",
    "google>=3.0.0",
    "google-genai>=1.11.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[tool.flake8]
max-line-length = 100
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
    "W503",  # line break before binary operator
    "F403",  # 'from module import *' used; unable to detect undefined names
]
